# freeabode

./: .gitignore  .gitmodules  Makefile.am  README  autogen.sh  bytes.h  configure.ac  crc.c  freeabode  freeabode.proto  libfreeabode.pc.in  main.c  main.h  nest.c  nest.h  remctl.c  security.c  security.h  util.h  zap.c  zap.h
bme280/: Makefile.am  bme280.c
fabd-cli/: Makefile.am  cli.c  remctl.c
freeabode/: Makefile.am  bytes.h  fabdcfg.c  fabdcfg.h  freeabode.proto  json.c  json.h  logging.c  security.c  security.h  util.h  util_hvac.c  util_hvac.h
gpio_hvac/: Makefile.am  gpio_hvac.c
htu21d/: Makefile.am  htu21d.c
libfreeabode/: Makefile.am  fabdcfg.c  fabdcfg.h  freeabode.proto  json.c  json.h  logging.c  logging.h  security.c  util.c  util.h
nbp/: Makefile.am  crc.c  crc.h  main.c  nest.c  nest.h
tstat/: Makefile.am  tstat.c
wallknob/: Makefile.am  textmenu.c  wallknob.c  wallknob.h
