if HAVE_LIBGPIOD

bin_PROGRAMS = gpio_hvac

gpio_hvac_SOURCES = gpio_hvac.c
gpio_hvac_CFLAGS = $(FREEABODE_CFLAGS) $(LIBGPIOD_CFLAGS) $(JANSSON_CFLAGS) $(LIBZMQ_CFLAGS) $(PROTOBUF_C_CFLAGS)
gpio_hvac_LDADD = $(FREEABODE_LIBS) $(LIBGPIOD_LIBS) $(JANSSON_LIBS) $(LIBZMQ_LIBS) $(PROTOBUF_C_LIBS)

endif
